ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reverse-words
  annotations:
    kubernetes.io/ingress.class: nginx
    argocd.argoproj.io/compare-options: IgnoreExtraneous
spec:
  rules:
  - host: reversewords-prod.apps.lab1.ad.nadlab.com
    http:
      paths:
      - backend:
          serviceName: reverse-words
          servicePort: http
